--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,10 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  display: flex; /*Flexbox layout để căn chỉnh các phần tử con trong header.*/
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: center; /*Căn giữa các phần tử con theo chiều ngang.*/
+  justify-content: center; /*Căn giữa các phần tử con theo chiều dọc.*/
   font-size: calc(10px + 2vmin);
   color: white;
 }
